--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -5,5 +5,15 @@
 
     <dimen name="margin_horizontal">16dp</dimen>
 
+    <dimen name="common_icon_size">48dp</dimen>
+
+    <!-- placeholders -->
     <dimen name="placeholder_track_padding">22dp</dimen>
+    <dimen name="placeholder_album_padding">90dp</dimen>
+
+    <!-- item track -->
+    <dimen name="item_track_title">13dp</dimen>
+    <dimen name="item_track_subtitle">11dp</dimen>
+    <dimen name="item_track_cover_size">48dp</dimen>
+    <dimen name="item_track_cover_margin">7dp</dimen>
 </resources>
