--- a/Trackify/app/src/main/res/layout/item_playlist_track.xml
+++ b/Trackify/app/src/main/res/layout/item_playlist_track.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <include layout="@layout/layout_swipeable" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -12,6 +14,8 @@
         android:background="?android:colorBackground"
         android:paddingStart="@dimen/margin_horizontal"
         android:paddingEnd="@dimen/margin_horizontal">
+
+
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/cover"
