--- a/Trackify/app/src/main/res/layout/playlist_creator.xml
+++ b/Trackify/app/src/main/res/layout/playlist_creator.xml
@@ -204,6 +204,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSelectedSongs"
         android:layout_width="0dp"
         android:layout_height="171dp"
         android:layout_marginStart="24dp"
