Refactored drag and drop code

--- a/Trackify/app/src/main/res/layout/activity_main.xml
+++ b/Trackify/app/src/main/res/layout/activity_main.xml
@@ -3,4 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/playlist"
+        android:name="com.apm.trackify.playlist.PlaylistFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
