--- a/Trackify/app/src/main/res/layout/layout_swipeable.xml
+++ b/Trackify/app/src/main/res/layout/layout_swipeable.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?colorSwipeBackground">
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible"
-        tools:background="@android:color/holo_red_light" />
+        android:layout_height="match_parent" />
 
     <ImageButton
-        android:id="@+id/deleteIcon"
+        android:id="@+id/leftIcon"
         android:layout_width="@dimen/common_icon_size"
         android:layout_height="@dimen/common_icon_size"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_delete"
+        app:srcCompat="@drawable/ic_delete"
         tools:ignore="ContentDescription" />
 
     <ImageButton
-        android:id="@+id/playNextIcon"
+        android:id="@+id/rightIcon"
         android:layout_width="@dimen/common_icon_size"
         android:layout_height="@dimen/common_icon_size"
         android:layout_gravity="center_vertical|end"
         android:layout_marginEnd="16dp"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_drag_handle"
+        app:srcCompat="@drawable/ic_playlist_add"
         tools:ignore="ContentDescription" />
 </merge>
