--- a/Trackify/app/src/main/res/values-night/themes.xml
+++ b/Trackify/app/src/main/res/values-night/themes.xml
@@ -2,18 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.Trackify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/Golden_Poppy</item>
+        <item name="colorPrimaryVariant">@color/Sunglow</item>
         <item name="colorOnPrimary">@color/black</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/GreenBlueCrayola</item>
+        <item name="colorSecondaryVariant">@color/Tufts_Blue</item>
+        <item name="colorOnSecondary">@color/white</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/Rich_Black</item>
     </style>
 </resources>
