--- a/Trackify/app/src/main/res/values/colors.xml
+++ b/Trackify/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="Golden_Poppy">#F9C307</color>
+    <color name="Sunglow">#FED33C</color>
+    <color name="GreenBlueCrayola">#2886D7</color>
+    <color name="Tufts_Blue">#3C91DB</color>
+    <color name="Rich_Black">#101116</color>
+    <color name="Raisin_Black">#262833</color>
+    <color name="Independence">#3C3F50</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="placeholder_image_tint">#262626</color>
