--- a/Trackify/app/src/main/res/values/themes.xml
+++ b/Trackify/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <!--<item name="android:windowBackground">@color/Rich_Black</item>
-        <item name="android:textColor">@color/white</item>-->
+        <item name="android:windowBackground">@color/Raisin_Black</item>
+        <item name="android:textColor">@color/white</item>
    </style>
 </resources>
