--- a/Trackify/app/src/main/res/layout/playlists_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_landing_fragment.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#4F4C4C"
-    android:backgroundTint="#423D43">
+    android:layout_height="match_parent">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -87,17 +84,7 @@
         tools:layout_editor_absoluteY="241dp"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="246dp"
-        android:layout_height="43dp"
-        android:background="#2196F3"
-        android:backgroundTint="#2196F3"
-        android:text="Create New Playlist"
-        app:cornerRadius="10dp"
-        app:strokeColor="#2196F3"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="640dp" />
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -125,5 +112,16 @@
         android:textColor="@color/white"
         tools:layout_editor_absoluteX="269dp"
         tools:layout_editor_absoluteY="172dp" />
+    -->
+    <Button
+        android:id="@+id/button"
+        android:layout_width="246dp"
+        android:layout_height="43dp"
+        android:text="Create New Playlist"
+        app:cornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
