--- a/Trackify/app/src/main/res/layout/routes_search_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_search_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#AB9D9D">
+    tools:context=".ui.routes.RoutesFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
