--- a/Trackify/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Trackify/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_playlist"
         android:icon="@drawable/ic_musical_note"
-        android:title="@string/title_home" />
+        android:title="@string/title_playlists" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_routes"
         android:icon="@drawable/ic_map"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_routes" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_profile" />
 
 </menu>
