--- a/Trackify/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_playlist">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.apm.trackify.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_playlist"
+        android:name="com.apm.trackify.ui.playlist.PlaylistFragment"
+        tools:layout="@layout/playlists_landing_fragment" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.apm.trackify.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_routes"
+        android:name="com.apm.trackify.ui.routes.RoutesFragment"
+        tools:layout="@layout/routes_search_fragment" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.apm.trackify.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_profile"
+        android:name="com.apm.trackify.ui.profile.ProfileFragment"
+        tools:layout="@layout/user_profile_fragment" />
 </navigation>
