--- a/Trackify/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Trackify/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/title_routes" />
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/navigation_user"
         android:icon="@drawable/ic_profile"
         android:title="@string/title_profile" />
 
