--- a/Trackify/app/src/main/res/layout/item_playlist_footer.xml
+++ b/Trackify/app/src/main/res/layout/item_playlist_footer.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:colorBackground"
     android:orientation="vertical"
     android:paddingStart="16dp"
-    android:paddingTop="24dp"
+    android:paddingTop="12dp"
     android:paddingEnd="16dp"
     android:paddingBottom="8dp"
     tools:ignore="UseCompoundDrawables">
@@ -31,3 +31,4 @@
         tools:text="3 Tracks · 9 Minutes" />
 
 </LinearLayout>
+
