--- a/Trackify/app/src/main/res/values-night/themes.xml
+++ b/Trackify/app/src/main/res/values-night/themes.xml
@@ -2,20 +2,20 @@
     <!-- Base application theme. -->
     <style name="Theme.Trackify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/Golden_Poppy</item>
-        <item name="colorPrimaryVariant">@color/Sunglow</item>
+        <item name="colorPrimary">@color/golden_poppy</item>
+        <item name="colorPrimaryVariant">@color/sunglow</item>
         <item name="colorOnPrimary">@color/black</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/GreenBlueCrayola</item>
-        <item name="colorSecondaryVariant">@color/Tufts_Blue</item>
+        <item name="colorSecondary">@color/green_blue_crayola</item>
+        <item name="colorSecondaryVariant">@color/tufts_blue</item>
         <item name="colorOnSecondary">@color/white</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@color/Raisin_Black</item>
+        <item name="android:windowBackground">@color/raisin_black</item>
         <item name="android:textColor">@color/white</item>
     </style>
 </resources>
