--- a/Trackify/app/src/main/res/values/colors.xml
+++ b/Trackify/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="Golden_Poppy">#F9C307</color>
-    <color name="Sunglow">#FED33C</color>
-    <color name="GreenBlueCrayola">#2886D7</color>
-    <color name="Tufts_Blue">#3C91DB</color>
-    <color name="Rich_Black">#101116</color>
-    <color name="Raisin_Black">#262833</color>
-    <color name="Independence">#3C3F50</color>
+    <color name="golden_poppy">#F9C307</color>
+    <color name="sunglow">#FED33C</color>
+    <color name="green_blue_crayola">#2886D7</color>
+    <color name="tufts_blue">#3C91DB</color>
+    <color name="rich_black">#101116</color>
+    <color name="raisin_black">#262833</color>
+    <color name="independence">#3C3F50</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
 
