--- a/Trackify/app/src/main/res/layout/common_swipeable_layout.xml
+++ b/Trackify/app/src/main/res/layout/common_swipeable_layout.xml
@@ -8,7 +8,8 @@
     <View
         android:id="@+id/background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="?android:colorBackground" />
 
     <ImageButton
         android:id="@+id/leftIcon"
